Changed deprecated Class.newInstance method.